--- a/server/node-template/package.json
+++ b/server/node-template/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "darf-nodejs-template",
+  "name": "clofly-nodejs-template",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
