--- a/tool/package.json
+++ b/tool/package.json
@@ -9,6 +9,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "mongoose": "^4.8.2"
+    "adm-zip": "^0.4.7",
+    "crypto": "0.0.3",
+    "fs-extra": "^2.0.0",
+    "mongoose": "^4.8.2",
+    "s3": "^4.4.0"
   }
 }
