--- a/cli/package.json
+++ b/cli/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "adm-zip": "^0.4.7",
+    "aws-sdk": "^2.16.0",
     "crypto": "0.0.3",
     "fs-extra": "^2.0.0",
     "mongoose": "^4.8.2",
