--- a/cli/package.json
+++ b/cli/package.json
@@ -1,19 +1,12 @@
 {
   "name": "clofly-api",
   "version": "1.0.0",
-  "description": "Commandline interface for dasf usres to deploy their functions.",
-  "main": "index.js",
-  "scripts": {
-    "test": "node dasf.js"
-  },
-  "author": "",
+  "description": "Commandline interface for clofly usres to deploy their functions.",
+  "main": "clofly.js",
+  "author": "clofly.com",
   "license": "ISC",
   "dependencies": {
-    "adm-zip": "^0.4.7",
     "aws-sdk": "^2.16.0",
-    "crypto": "0.0.3",
-    "fs-extra": "^2.0.0",
-    "mongoose": "^4.8.2",
-    "s3": "^4.4.0"
+    "crypto": "0.0.3"
   }
 }
