--- a/server/node-template/Dockerfile
+++ b/server/node-template/Dockerfile
@@ -5,12 +5,12 @@ FROM node:slim
 RUN mkdir -p /usr/src/app
 WORKDIR /usr/src/app
 
-# Install app dependencies
-COPY package.json /usr/src/app/
-RUN npm install
-
 # Bundle app source
 COPY . /usr/src/app
+
+# Install app dependencies
+RUN npm install
+RUN node install-user-dependencies.js
 
 EXPOSE 8080
 CMD [ "npm", "start" ]
