update uwsgi as deamon

--- a/server/uwsgi.ini
+++ b/server/uwsgi.ini
@@ -1,5 +1,8 @@
 [uwsgi]
+uid = ubuntu
+gid = ubuntu
+http-socket = :80
 project=clofly-service
-module=/home/ubuntu/clofly/server/uwsgi_server.py:application
+wsgi-file=/home/ubuntu/clofly/server/uwsgi_server.py
 master=true
 processes=5
