--- a/cli/package.json
+++ b/cli/package.json
@@ -7,6 +7,8 @@
   "license": "ISC",
   "dependencies": {
     "aws-sdk": "^2.16.0",
-    "crypto": "0.0.3"
+    "crypto": "0.0.3",
+    "request": "^2.81.0",
+    "yargs": "^7.0.1"
   }
 }
