--- a/cli/config.json
+++ b/cli/config.json
@@ -1,5 +1,5 @@
 {
-    "API_URL":      "http://api.clofly.com/",
+    "API_URL":      "http://127.0.0.1:5000/",
     "SERVICE_URL":  "http://clofly.com/",
     "USER_CONFIG":  "~/.clofly/config.json",
     "FID_LENGTH":   8
