--- a/server/uwsgi.service
+++ b/server/uwsgi.service
@@ -3,7 +3,7 @@ Description=uWSGI Emperor service
 After=syslog.target
 
 [Service]
-ExecStart=/usr/local/bin/uwsgi --emperor /clofly=/home/ubuntu/clofly/server
+ExecStart=/usr/local/bin/uwsgi --ini /home/ubuntu/clofly/server/uwsgi.ini
 Restart=always
 KillSignal=SIGQUIT
 Type=notify
