--- a/cli/package.json
+++ b/cli/package.json
@@ -8,6 +8,8 @@
   "dependencies": {
     "aws-sdk": "^2.16.0",
     "crypto": "0.0.3",
+    "expand-tilde": "^2.0.2",
+    "path": "^0.12.7",
     "request": "^2.81.0",
     "yargs": "^7.0.1"
   }
