--- a/cli/config.local.json
+++ b/cli/config.local.json
@@ -1,5 +1,5 @@
 {
-    "API_URL":      "http://localhost:5000/",
+    "API_URL":      "http://localhost/",
     "SERVICE_URL":  "http://clofly.com/",
     "USER_CONFIG":  "~/.clofly/config.json",
     "FID_LENGTH":   8
