--- a/cli/package.json
+++ b/cli/package.json
@@ -7,6 +7,7 @@
   "license": "ISC",
   "dependencies": {
     "aws-sdk": "^2.16.0",
+    "chalk": "^1.1.3",
     "crypto": "0.0.3",
     "expand-tilde": "^2.0.2",
     "path": "^0.12.7",
